Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -381,7 +381,7 @@
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    for each in restaurants:\n",
-    "        restaurants = map(format_restaurant, each)\n",
+    "        restaurants = map(format_restaurant, restaurants)\n",
     "    return restaurants"
    ]
   },
