--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    lilambda restaurants:\n",
+    "    list(map(lambda restaurants:\n",
     "        restaurants = map(format_restaurant, restaurants)\n",
     "    return restaurants"
    ]
