Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,9 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-3e9f76d5bf24>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-3e9f76d5bf24>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return restaurants\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    list(map(lambda restaurants: (format_restaurant, restaurants)\n",
