--- a/index.ipynb
+++ b/index.ipynb
@@ -389,8 +389,7 @@
    ],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    list(map(lambda restaurants: (format_restaurant, restaurants)\n",
-    "    return restaurants"
+    "    list(map(lambda restaurants: (format_restaurant, restaurants))"
    ]
   },
   {
