--- a/index.ipynb
+++ b/index.ipynb
@@ -375,22 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-48b61b0f0500>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-48b61b0f0500>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return restaurants\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    list(map(lambda restaurants: (format_restaurant, restaurants)))\n",
-    "    return restaurant"
+    "    return restaurants"
    ]
   },
   {
