--- a/index.ipynb
+++ b/index.ipynb
@@ -375,13 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    list(map(lambda restaurants: (format_restaurant, restaurants)))\n",
-    "    return restaurants"
+    "    return list(restaurants)"
    ]
   },
   {
