Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,13 +380,13 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    list(map(lambda restaurants: (format_restaurant, restaurants)))\n",
+    "    list(map(lambda restaurants: format_restaurant, restaurants))\n",
     "    return restaurants"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
