Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,18 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    list(map(lambda restaurants: format_restaurant, restaurants))\n",
+    "    restaurants = list(map(lambda restaurants: format_restaurant, restaurants))\n",
     "    return restaurants"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -394,38 +394,17 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
-       " {'name': 'Salt And Board',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 11},\n",
-       " {'name': 'Frontier Restaurant',\n",
-       "  'price': '$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 1373},\n",
-       " {'name': 'Nexus Brewery',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 680},\n",
-       " {'name': \"Devon's Pop Smoke\",\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 54},\n",
-       " {'name': 'Cocina Azul',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': True,\n",
-       "  'review_count': 647},\n",
-       " {'name': 'Philly Steaks',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 25},\n",
-       " {'name': 'Stripes Biscuit',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': True,\n",
-       "  'review_count': 20}]"
+       "[<function __main__.format_restaurant(restaurant)>,\n",
+       " <function __main__.format_restaurant(restaurant)>,\n",
+       " <function __main__.format_restaurant(restaurant)>,\n",
+       " <function __main__.format_restaurant(restaurant)>,\n",
+       " <function __main__.format_restaurant(restaurant)>,\n",
+       " <function __main__.format_restaurant(restaurant)>,\n",
+       " <function __main__.format_restaurant(restaurant)>,\n",
+       " <function __main__.format_restaurant(restaurant)>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
