Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,18 +375,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    restaurants = list(map(lambda restaurants: format_restaurant, restaurants))\n",
-    "    return restaurants"
+    "    return list(map(lambda restaurants: format_restaurant, restaurants))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -404,7 +403,7 @@
        " <function __main__.format_restaurant(restaurant)>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
