--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    return list(map(lambda restaurants: format_restaurant, restaurants))\n"
+    "    list(map(lambda restaurants: format_restaurant, restaurants))\n"
    ]
   },
   {
