--- a/index.ipynb
+++ b/index.ipynb
@@ -375,39 +375,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    list(map(lambda restaurants: format_restaurant, restaurants[]))\n"
+    "    list(map(lambda restaurants: format_restaurant, restaurants[0]))\n",
+    "    return resta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<function __main__.format_restaurant(restaurant)>,\n",
-       " <function __main__.format_restaurant(restaurant)>,\n",
-       " <function __main__.format_restaurant(restaurant)>,\n",
-       " <function __main__.format_restaurant(restaurant)>,\n",
-       " <function __main__.format_restaurant(restaurant)>,\n",
-       " <function __main__.format_restaurant(restaurant)>,\n",
-       " <function __main__.format_restaurant(restaurant)>,\n",
-       " <function __main__.format_restaurant(restaurant)>]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "map_format_restaurants(restaurants)\n",
     "\n",
