--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    list(map(lambda restaurants: format_restaurant, restaurants[0]))\n",
+    "    list(map(lambda restaurants: format_restaurant, restaurants))\n",
     "    return restaurants"
    ]
   },
