--- a/index.ipynb
+++ b/index.ipynb
@@ -375,18 +375,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    list(map(lambda restaurants: format_restaurant, restaurants))\n",
-    "    return restaurants"
+    "    return list(map(format_restaurant,restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -396,36 +395,30 @@
       "text/plain": [
        "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
        " {'name': 'Salt And Board',\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 11},\n",
        " {'name': 'Frontier Restaurant',\n",
-       "  'price': '$',\n",
+       "  'price': 1,\n",
        "  'is_closed': False,\n",
        "  'review_count': 1373},\n",
        " {'name': 'Nexus Brewery',\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 680},\n",
        " {'name': \"Devon's Pop Smoke\",\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 54},\n",
-       " {'name': 'Cocina Azul',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': True,\n",
-       "  'review_count': 647},\n",
-       " {'name': 'Philly Steaks',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 25},\n",
+       " {'name': 'Cocina Azul', 'price': 2, 'is_closed': True, 'review_count': 647},\n",
+       " {'name': 'Philly Steaks', 'price': 2, 'is_closed': False, 'review_count': 25},\n",
        " {'name': 'Stripes Biscuit',\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': True,\n",
        "  'review_count': 20}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
