--- a/index.ipynb
+++ b/index.ipynb
@@ -554,7 +554,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(restaurants['price']==1,restaurants))"
+    "    return list(filter(restaurants['price']=='$'1,restaurants))"
    ]
   },
   {
